CSS/style.css
/* ... */
figure.reviews__Comment img {
  max-width: 100%;
  vertical-align: middle;
  height: 90px;
  width: 90px;
  border-radius: 50%;
  margin: 40px 0 0 10px;
}
figure.reviews__Comment blockquote {
  display: block;
  border-radius: 8px;
  position: relative;
  background-color: #fafafa;
  /* padding: 25px 50px 30px 50px; */
  padding: 25px 65px;
  font-size: 1em;
  font-weight: 500;
  margin: 0;
  line-height: 1.6em;
  font-style: italic;
}
figure.reviews__Comment blockquote:before,
figure.reviews__Comment blockquote:after {
  font-family: "FontAwesome";
  content: "\201C";
  position: absolute;
  font-size: 50px;
  opacity: 0.3;
  font-style: normal;
}
figure.reviews__Comment blockquote:before {
  top: 10px;
  left: 10px;
}
figure.reviews__Comment blockquote:after {
  content: "\201D";
  right: 10px;
  bottom: 10px;
}
figure.reviews__Comment .arrow {
  top: 100%;
  width: 0;
  height: 0;
  border-left: 0 solid transparent;
  border-right: 25px solid transparent;
  border-top: 25px solid #fafafa;
  margin: 0;
  position: absolute;
}
figure.reviews__Comment .reviewer {
  position: absolute;
  bottom: 45px;
  padding: 0 10px 0 120px;
  margin: 0;
  text-transform: uppercase;
  color: #ffffff;
  -webkit-transform: translateY(50%);
  transform: translateY(50%);
}
figure.reviews__Comment .reviewer h5 {
  opacity: 0.8;
  margin: 0;
  font-weight: 800;
}
figure.reviews__Comment .reviewer h5 span {
  font-weight: 400;
  text-transform: none;
  padding-left: 5px;
  font-size: 0.6rem;
}
/*=============================== END OF REVIEWS SECTION =============================== */

/*===============================  DOWNLOAD MENU SECTION =============================== */
.downloadMenu {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.downloadMenu__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 2rem 0;
}

.downloadMenu--contents {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  margin: 1rem;
}

.downloadMenu--title h2 {
  display: inline-block;
  font-size: 3rem;
  letter-spacing: -2px;
  margin: 0 15vw 0 0;
}

/* .downloadMenu--button button a {
  font-size: calc(17pt + 1.25vw);
  letter-spacing: 3px;
} */

.downloadMenu--clickBtn {
  text-decoration: none;
  display: inline-block;
  background-color: #9d3b3b;
  color: white;
  border: 1px #9d3b3b solid;
  border-radius: 4px;
  font-size: 1.2rem;
  padding: 0.5em 2em;
}

.downloadMenu--clickBtn:hover {
  background-color: white;
  color: #9d3b3b;
  border: 1px #9d3b3b solid;
  cursor: pointer;
}

/*=============================== END OF DOWNLOAD MENU SECTION =============================== */

/*=============================== FOOTER SECTION ===============================*/
#footer {
  color: #fff;
  font-size: 1em;
  padding: 38px 0;
  box-sizing: border-box;
  background: #262626;
  width: 100%;
}

.footer__container {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 100%;
  max-width: 1400px;
  box-sizing: border-box;
  padding: 0 2%;
  margin: 0 auto;
}

#footer .footer__container .footer__menu__list {
  display: inline-block;
}

.footer__menu__list h2 {
  color: #fff;
  margin: 10px 0 5px;
  font-size: calc(12pt + 0.4vw);
  font-weight: 700;
  text-transform: uppercase;
}

.footer__menu__list ul {
  width: 100%;
  padding: 0;
  margin: 0;
}

.footer__menu__list ul li {
  list-style: none;
  padding: 0;
  margin: 0;
  color: rgba(101, 99, 99, 1);
}

.footer__menu__list ul li a:hover {
  color: rgb(255, 255, 255);
}

#footer img {
  display: inline-block;
  max-width: 100%;
  height: auto;
}

.footer_company-logo {
  width: 30%;
}

.footer__rights {
  text-align: center;
  font-size: 0.8em;
  margin-bottom: 0;
  margin-top: 4rem;
}

.footer__rights__container {
  width: 100%;
  max-width: 1400px;
  box-sizing: border-box;
  padding: 0 2%;
  margin: 0 auto;
}

.footer__rights .footer__rights__container .center {
  font-size: 1rem;
}
/*=============================== END OF FOOTER SECTION ===============================*/

/*=============================== MEDIA QUERIES ===============================*/

/* MENU SECTION */
/* @media only screen and (max-width: 1660px) {
  .menu__item:nth-child(4) {
    flex: 1 0 21%;
  }
} */

/* END OF MENU SECTION */

/*=============================== NAVBAR MENU ===============================*/
@media only screen and (min-width: 1200px) {
  .header .navBar {
    width: auto;
  }
  .header .navBar nav {
    position: initial;
    transform: translate(0, 0);
    width: auto;
    height: auto;
    flex-direction: row;
    background-color: transparent;
    padding: 0;
  }
  .header .navBar nav .nav-list {
    display: flex;
    flex-direction: row;
    padding-bottom: 0;
  }
  .header .navBar nav .nav-list li {
    /* padding: 0 10px; */
    display: flex;
    align-items: center;
    justify-content: center;
    width: max-content;
  }
  .header .navBar nav .nav-list li a {
    color: black;
    font-size: 1.2rem;
  }
  .header .navBar .hamburger-Menu {
    display: none;
  }
}
/*=============================== END OF NAVBAR MENU ===============================*/

/*=============================== HERO SECTION ===============================*/
@media only screen and (max-width: 1000px) {
  #hero {
    background: linear-gradient(rgba(0, 0, 0, 0.455), rgba(0, 0, 0, 0.4111)),
      url("/Images/hero_Photo_1920x1281.jpg") no-repeat center / cover;
    color: white;
  }
}

@media only screen and (max-width: 865px) {
  .menu__item {
    flex: none;
  }
}
/* ... */

